# wizconsole

./: .gitignore  pyproject.toml
src/: launcher.py
src/wizconsole/controller/: __init__.py  light.py
src/wizconsole/model/: __init__.py
src/wizconsole/view/: __init__.py  controls.py
